--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular": "angularjs#^1.6.5",
+    "angular-resource": "^1.6.5"
   }
 }
